WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24503
Can't click on the clear button of an absolutely-positioned search field
https://bugs.webkit.org/show_bug.cgi?id=24503
Summary
Can't click on the clear button of an absolutely-positioned search field
Simon Fraser (smfr)
Reported
2009-03-10 16:40:26 PDT
Hit testing on the clear button in a search field broke in
http://trac.webkit.org/changeset/41389
This only happens if the search field is absolutely positioned.
Attachments
Testcase
(380 bytes, text/html)
2009-03-10 16:41 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(10.05 KB, patch)
2009-03-10 18:50 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-10 16:40:49 PDT
<
rdar://problem/6665381
>
Simon Fraser (smfr)
Comment 2
2009-03-10 16:41:15 PDT
Created
attachment 28454
[details]
Testcase
Simon Fraser (smfr)
Comment 3
2009-03-10 18:50:43 PDT
Created
attachment 28459
[details]
Patch, testcase, changelog
Darin Adler
Comment 4
2009-03-10 22:17:01 PDT
Comment on
attachment 28459
[details]
Patch, testcase, changelog Looks good. r=me assuming all the other regression tests still pass. Could you add dumpAsText to the regression test so it has a chance of working on more platforms?
Simon Fraser (smfr)
Comment 5
2009-03-10 22:44:17 PDT
http://trac.webkit.org/changeset/41576
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug