WebCore/rendering/RenderLayer.cpp
@@ -2400,8 +2400,11 @@ bool RenderLayer::hitTestContents(const HitTestRequest& request, HitTestResult& 
     if (!renderer()->hitTest(request, result, hitTestPoint,
                             layerBounds.x() - renderBoxX(),
                             layerBounds.y() - renderBoxY(), 
-                            hitTestFilter))
+                            hitTestFilter)) {
+        // It's wrong to set innerNode, but then claim that you didn't hit anything.
+        ASSERT(!result.innerNode());
         return false;
+    }
 
     // For positioned generated content, we might still not have a
     // node by the time we get to the layer level, since none of
